--- a/app/src/main/res/drawable/light_message_background.xml
+++ b/app/src/main/res/drawable/light_message_background.xml
@@ -3,6 +3,6 @@
     <corners
         android:radius="5dp"
         android:topLeftRadius="0dp"/>
-    <solid android:color="#CEDCCA"/>
+    <solid android:color="?attr/LightMsgColor"/>
 
 </shape>
