--- a/app/src/main/res/layout/activity_group_visit.xml
+++ b/app/src/main/res/layout/activity_group_visit.xml
@@ -10,7 +10,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/backGround"
+        android:background="?attr/backGround"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,7 +25,7 @@
                 android:id="@+id/groupIcongv"
                 android:layout_width="0dp"
                 android:layout_height="350dp"
-                android:background="@color/backGround"
+                android:background="?attr/backGround"
                 android:scaleType="centerCrop"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -64,7 +64,9 @@
                 android:layout_marginEnd="10sp"
                 android:layout_marginStart="15dp"
                 android:text="Description"
-                android:textColor="#020000"
+                android:autoLink="all"
+                android:textColorLink="@color/linkColor"
+                android:textColor="@color/text"
                 android:textSize="23sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/changeDescriptiongv"
