--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/backGround"
+    android:background="?attr/backGround"
     tools:context=".profileActivity">
 
     <androidx.core.widget.NestedScrollView
@@ -126,7 +126,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_marginRight="20dp"
-                android:backgroundTint="@color/backGround"
+                android:backgroundTint="?attr/backGround"
                 app:layout_constraintBottom_toBottomOf="@+id/statusEditor"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/statusEditor"
@@ -137,9 +137,8 @@
                 android:id="@+id/professionBtn"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-
                 android:layout_marginRight="20dp"
-                android:backgroundTint="@color/backGround"
+                android:backgroundTint="?attr/backGround"
                 app:layout_constraintBottom_toBottomOf="@+id/professionEditor"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/professionEditor"
@@ -152,7 +151,7 @@
                 android:layout_height="30dp"
                 android:layout_marginRight="20dp"
 
-                android:backgroundTint="@color/backGround"
+                android:backgroundTint="?attr/backGround"
                 app:layout_constraintBottom_toBottomOf="@+id/countryEditor"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/countryEditor"
@@ -164,7 +163,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_marginRight="20dp"
-                android:backgroundTint="@color/backGround"
+                android:backgroundTint="?attr/backGround"
                 app:layout_constraintBottom_toBottomOf="@+id/languagesEditor"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/languagesEditor"
@@ -176,7 +175,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_marginRight="20dp"
-                android:backgroundTint="@color/backGround"
+                android:backgroundTint="?attr/backGround"
                 app:layout_constraintBottom_toBottomOf="@+id/genderEditor"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/genderEditor"
@@ -189,7 +188,7 @@
                 android:layout_height="wrap_content"
                 android:rotation="90"
                 android:text="Name"
-                android:textColor="@color/colorAccent"
+                android:textColor="@color/text"
                 android:textSize="36sp"
                 android:textStyle="bold|italic"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView"
