--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -8,7 +8,7 @@
     tools:context=".splashScreenA">
 
     <ImageView
-        android:id="@+id/logo_ecv"
+        android:id="@+id/logo_ss"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:contentDescription="Affix"
