--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/backGround"
+    android:background="?attr/backGround"
     tools:context=".Fragments.chatFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -49,6 +49,7 @@
         app:lottie_rawRes="@raw/loading_content" />
 
     <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/bgAnimation"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/adView"
