--- a/app/src/main/res/layout/fragment_reward.xml
+++ b/app/src/main/res/layout/fragment_reward.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/backGround"
+    android:background="?attr/backGround"
     tools:context=".Fragments.rewardsFragment">
 
     <com.google.android.gms.ads.AdView
@@ -63,7 +63,7 @@
         android:layout_height="wrap_content"
         android:text="Points"
         android:textAlignment="center"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/text"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/adbutton"
@@ -78,7 +78,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Watch Video to get 50 points."
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/text"
         android:textSize="24dp"
         app:layout_constraintBottom_toTopOf="@+id/adbutton"
         app:layout_constraintEnd_toEndOf="parent"
