--- a/app/src/main/res/layout/members_dialog.xml
+++ b/app/src/main/res/layout/members_dialog.xml
@@ -13,7 +13,7 @@
         android:id="@+id/textView14"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
+        android:background="?attr/backGround"
         android:text="    View Profile"
         android:textColor="#000000"
         android:textSize="24sp"
@@ -31,7 +31,7 @@
         android:text="    Send Message"
         android:textSize="24sp"
         android:textColor="#000000"
-        android:background="@color/colorPrimary"
+        android:background="?attr/backGround"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,7 +45,7 @@
         android:text="    Make Admin"
         android:textSize="24sp"
         android:visibility="gone"
-        android:background="@color/colorPrimary"
+        android:background="?attr/backGround"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -82,7 +82,7 @@
         android:textColor="#000000"
         android:textSize="24sp"
         android:visibility="gone"
-        android:background="@color/colorPrimary"
+        android:background="?attr/backGround"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/divider4" />
