--- a/app/src/main/res/drawable/dark_message_background.xml
+++ b/app/src/main/res/drawable/dark_message_background.xml
@@ -3,6 +3,6 @@
     <corners
         android:radius="5dp"
         android:topRightRadius="0dp"/>
-    <solid android:color="#9ABA92"/>
+    <solid android:color="?attr/DarkMsgColor"/>
 
 </shape>
