--- a/app/src/main/res/layout/activity_add_member.xml
+++ b/app/src/main/res/layout/activity_add_member.xml
@@ -24,7 +24,7 @@
         android:layout_marginBottom="20dp"
         android:clickable="true"
         android:rotationY="180"
-        app:backgroundTint="@color/colorPrimaryDark"
+        app:backgroundTint="?attr/Tint"
         app:layout_constraintBottom_toBottomOf="@+id/newMemberList"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
