--- a/app/src/main/res/layout/activity_chat_page.xml
+++ b/app/src/main/res/layout/activity_chat_page.xml
@@ -4,15 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:backgroundTint="@color/backGround"
-    android:background="@color/backGround"
+    android:background="?attr/backGround"
     tools:context=".Fragments.chatFragment">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryDark"
+        android:background="?attr/Tint"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -59,7 +58,7 @@
         android:layout_height="0dp"
         android:layout_marginHorizontal="3dp"
         android:elevation="1dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="2dp"
         app:layout_constraintBottom_toTopOf="@+id/include"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -68,7 +67,6 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/include"
         android:visibility="gone"
-        layout="@layout/meeting_adapter"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:elevation="1dp"
@@ -153,7 +151,7 @@
     </androidx.cardview.widget.CardView>
 
     <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/lottieAnimationView"
+        android:id="@+id/bgAnimation"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:scaleType="fitXY"
@@ -187,7 +185,7 @@
             android:layout_marginVertical="2dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#40FFFFFF"
+            android:background="#80FFFFFF"
             android:hint="message..."
             android:layout_margin="10dp"
             android:textIsSelectable="true"
