--- a/app/src/main/res/layout/activity_group.xml
+++ b/app/src/main/res/layout/activity_group.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/backGround"
+    android:background="?attr/backGround"
     android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -26,7 +26,7 @@
         android:layout_marginBottom="20dp"
         android:clickable="true"
         android:rotationY="180"
-        app:backgroundTint="@color/colorPrimaryDark"
+        app:backgroundTint="?attr/Tint"
         app:layout_constraintBottom_toBottomOf="@+id/making_group_list"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
