--- a/app/src/main/res/layout/activity_group_chat.xml
+++ b/app/src/main/res/layout/activity_group_chat.xml
@@ -4,15 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:backgroundTint="@color/backGround"
-    android:background="@color/backGround"
+    android:background="?attr/backGround"
     tools:context=".Fragments.groupFragment">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbarg"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:background="@color/colorPrimaryDark"
+        android:background="?attr/Tint"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -57,7 +56,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:elevation="1dp"
         android:id="@+id/chatPageMessageList"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="2dp"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginHorizontal="2dp"
@@ -68,6 +67,7 @@
         app:layout_constraintTop_toBottomOf="@+id/adView3" />
 
     <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/bgAnimation"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -208,7 +208,6 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/include"
         android:visibility="gone"
-        layout="@layout/meeting_adapter"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:elevation="1dp"
