--- a/app/src/main/res/layout/activity_send_request.xml
+++ b/app/src/main/res/layout/activity_send_request.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/backGround"
+    android:background="?attr/backGround"
     tools:context=".sendRequest">
 
     <androidx.core.widget.NestedScrollView
@@ -113,7 +113,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    android:shadowColor="@color/colorAccent"
+                    android:shadowColor="@color/text"
                     app:layout_constraintTop_toBottomOf="@+id/textView9"
                     app:layout_constraintVertical_bias="0.165" />
 
