--- a/app/src/main/res/layout/left_file_adapter.xml
+++ b/app/src/main/res/layout/left_file_adapter.xml
@@ -46,6 +46,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20sp"
         android:background="@drawable/btn_background"
+        android:backgroundTint="?attr/BtnTint"
         android:text="open"
         app:layout_constraintBottom_toBottomOf="@+id/imageView3"
         app:layout_constraintEnd_toEndOf="@+id/imageView3"
