--- a/app/src/main/res/layout/right_file_grp_adapter.xml
+++ b/app/src/main/res/layout/right_file_grp_adapter.xml
@@ -45,6 +45,7 @@
         android:layout_marginLeft="20dp"
         android:background="@drawable/btn_background"
         android:text="open"
+        android:backgroundTint="?attr/BtnTint"
         app:layout_constraintBottom_toBottomOf="@+id/imageView3g"
         app:layout_constraintEnd_toEndOf="@+id/imageView3g"
         app:layout_constraintHorizontal_bias="0.0"
