--- a/app/src/main/res/layout/activity_other_apps.xml
+++ b/app/src/main/res/layout/activity_other_apps.xml
@@ -63,4 +63,12 @@
         app:layout_constraintTop_toBottomOf="@+id/textView37"
         app:layout_constraintVertical_bias="0.0" />
 
+    <!--    <WebView-->
+<!--        android:id="@+id/webView"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
 </androidx.constraintlayout.widget.ConstraintLayout>
